Change Log

== MMC 2.0.0 (v2023, Mochi), Qianqian Fang <q.fang at neu.edu> ==

 2023-09-17 [6569f48] add comments to nightly build script for deployment
 2023-09-16 [c242cf7] update deploy script after reformat
 2023-09-13 [d3f25c6] avoid error on old windows sdk
 2023-09-13 [8a59cf0] support ASCII escape code in Windows terminals
 2023-09-12 [29480d5] only build main function in mmclab for apple
 2023-09-12 [86d5658] get around macos make oct error
 2023-09-12 [2bada1e] remove some warnings
 2023-09-12 [130570b] remove all file IO functions from mex and oct files
 2023-09-11 [4ca899f] remove liboctinterp-11, the output is only compatible to octave 8
 2023-09-10 [eb14b10] add fopenmp back for mex
 2023-09-10 [e20d718] leave out libgomp
 2023-09-10 [ee11269] try to statically link libpthread
 2023-09-10 [a42553b] fix build error
 2023-09-10 [75240d5] use upx compression
 2023-09-10 [7264068] clean make oct output before make mex
 2023-09-10 [06bcb39] test win matlab mex build
 2023-09-10 [dc5ad09] debug windows matlab mex
 2023-09-10 [fe21a6b] fix typo, add dll to package
 2023-09-10 [a902077] test windows matlab build
 2023-09-10 [c25420d] use octave 8 bundled gcc
 2023-09-10 [a5203e5] try octave 8.3 for windows build
 2023-09-10 [bb1aada] remove matlab gui waitbar, update README and docs
 2023-09-09 [13f3760] compute Reff for every medium for normalization
 2023-09-09 [1758504] fix gcc error on gcc 4.8
 2023-09-09 [7426c8d] guard CMP0074 cmake policy with version
 2023-09-08 [1455fbb] enable static linking with gcc with cmake
 2023-09-08 [4829e35] fix mex file missing symbol error, thanks to @ShijieYan
 2023-09-08 [03e36cd] support building cuda/trinity mex file
 2023-09-08 [d38e7e5] add missing zmat cmake file, add mmc-trinity cuda support in cmake
 2023-09-08 [74a3035] add the cmake file that was forgot to add
 2023-09-08 [1f2ef63] fix incorrect unit in the figure title
 2023-09-04 [6e41cfe] fix normalization bug on the exterior surface, close #82