@@ -3,7 +3,7 @@
 =           Supporting Multi-threading with SSE4, OpenCL and CUDA             =
 ===============================================================================
 
-Copyright (C) 2010-2023  Qianqian Fang <q.fang at neu.edu>
+Copyright (C) 2010-2024  Qianqian Fang <q.fang at neu.edu>
 
 -------------------------------------------------------------------------------
 
